Correcting the Spacing

--- a/public/Main.css
+++ b/public/Main.css
@@ -47,6 +47,7 @@ footer {
 	font-size:2vw;
 	padding: 0.4em;
 	text-align: center;	
+	margin-bottom:0px;
 }
 
 table, th, td {
@@ -176,15 +177,15 @@ nav li {
 	font-size:16px;
 }
 
-#title {
+h1{
 	 font-size:4vw; 
-	 text-align:center;
 	 font-family: Verdana, Tahoma, sans-serif;
 	 position: fixed;
-	 top:-2px;
 	 margin-left:auto;
 	 margin-right:auto;
+	 margin-top:0px;
 	 background-color: #343434;
+	 text-align: center;	
 }
 
 #description {
@@ -209,8 +210,7 @@ nav li {
 		 height:70vw;
 		 width:100%;
 	 }
-	 
-	 
+	  
 	 #markerInfo{
 		 border: 3px solid #00E676;
 		 /* margin-top: 3.67%; */
